# mcps-as-objects

./: .clinerules  .gitignore  AGENTS.md  EXECUTION-CHECKLIST.md  Makefile  README.md  mcps-lock.json  pyproject.toml  requirements.txt
.github/workflows/: card-validate.yml  mcp-cache.yml  mcp-runtime.yml  mcp-single.yml  mcp-validate.yml  mcp-verify.yml  project-automation.yml
docs/: ARCHITECTURE.md  CRITERIA.md  GOVERNANCE.md  INTEGRATION-PLAN.md  MCP-AUTHORING.md  MCP-MANAGER-PLAN.md  PATTERNS.md  PROJECT.md  WORKFLOW-FEASIBILITY.md  WORKFLOW-RUNTIME.md
mcps/_template/: README.md  mcp.json
mcps/_template/src/: server.py
mcps/example-greeter/: README.md  mcp.json
mcps/example-greeter/src/: server.py
mcps/example-greeter/tests/: test_smoke.py
mcps/meu-novo-servico/: README.md  mcp.json
mcps/meu-novo-servico/src/: server.py
mcps/meu-novo-servico/tests/: test_smoke.py
mcps/processador-texto/: README.md  mcp.json
mcps/processador-texto/src/: server.py
mcps/python-termux-builder/: README.md  mcp.json
mcps/python-termux-builder/src/: core.py  server.py
registry/src/: __init__.py  adapter.py  api.py  catalog.py  cli.py  composer.py  constructor.py  crud.py  db.py  platdetect.py  server.py  snapshot.py  validator.py  verifier.py
registry/tests/: test_adapter.py  test_smoke.py
schemas/: function-io.schema.json  lockfile.schema.json  mcp-manifest.schema.json
scripts/: build-db.py  compute-key.py  consolidate.py  execute-mcp.py  list-mcps.py  verify-mcp.py
tools/: bootstrap.sh  mcpsctl  snapshot.sh
(+1 files in other folders)
